--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>My New Website</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
+
 <body>
+
     <!-- Header line -->
     <div class="headerLine">
          <p class="headerText">
@@ -59,7 +62,7 @@
     <!-- Footer -->
     
     <div class="footerLine">
-        <p id="footerText">2022 My New Website Productions</p>
+        <p class="footerText">2022 My New Website Productions</p>
     </div>
 </body>
 </html>
